--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+header {
+  background-color: rgb(187, 215, 216);
+  padding: 15px;
+  text-align: center;
+  width: 100%;
+}
