2nd requirement | Adding 'Movie Cards Library' inside Header

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,14 @@
+html {
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-color: whitesmoke;
   box-sizing: border-box;
   font-size: 16px;
+  margin: 0;
 }
 
 .movie-card-header {
@@ -80,4 +87,10 @@ body {
   display: flex;
   justify-content: flex-end;
   padding: 12px 20px;
+}
+
+.header {
+  background-color: #6c757d;
+  line-height: 2em;
+  text-align: center;
 }
