--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@ body {
   background-color: whitesmoke;
   box-sizing: border-box;
   font-size: 16px;
+  color: black;
+  background-color: white;
 }
 
 .movie-card-header {
