--- a/src/App.css
+++ b/src/App.css
@@ -79,5 +79,6 @@ body {
   border-top: 1px solid rgba(0, 0, 0, 0.125);
   display: flex;
   justify-content: flex-end;
+  align-items: flex-start;
   padding: 12px 20px;
 }
