--- a/src/App.css
+++ b/src/App.css
@@ -81,3 +81,27 @@ body {
   justify-content: flex-end;
   padding: 12px 20px;
 }
+
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.moviecard {
+  background-color: rgb(200, 200, 200);
+  border: 4px dotted black; 
+  max-width: 400px;
+  margin-top: 50px;
+}
+
+.moviecard img{
+  max-width: 400px;
+}
+
+.App h1 {
+  background-color: rgb(245,197,24);
+  border-radius: 20%;
+  padding: 30px;
+}
