--- a/src/App.css
+++ b/src/App.css
@@ -114,9 +114,11 @@ body {
 
 @keyframes loop {
   from {
-    
-    transform: rotateY(0deg); }
+
+    transform: rotateY( 0deg );
+  }
 
   to {
-    transform: rotateY(360deg); }
+    transform: rotateY( 360deg );
+  }
 }
