--- a/src/App.css
+++ b/src/App.css
@@ -113,10 +113,12 @@ body {
 }
 
 @keyframes loop {
-  from {
-
-    transform: rotateY(0deg); }
-
-  to {
-    transform: rotateY(360deg); }
+  from
+    {
+      transform: rotateY(0deg);
+    }
+  to 
+    {
+      transform: rotateY(360deg);
+    }
 }
