corrigindo code climate 11

--- a/src/App.css
+++ b/src/App.css
@@ -113,12 +113,10 @@ body {
 }
 
 @keyframes loop {
-  from {
 
-    transform: rotateY(0deg);
-  }
-  to {
+  from {
+    transform: rotateY(0deg); }
     
-    transform: rotateY(360deg);
-  }
+  to {
+    transform: rotateY(360deg); }
 }
