--- a/src/App.css
+++ b/src/App.css
@@ -19,10 +19,18 @@ body {
   text-align: center;
 }
 
+.page-title:before {
+  content: '\f03d';
+  font-family: 'Font Awesome 5 Free', sans-serif;
+  font-weight: 900;
+  margin-right: 20px;
+}
+
 .movie-list {
   display: flex;
   flex-flow: row wrap;
   padding: 48px 30px;
+  justify-content: center;
 }
 
 .movie-card {
@@ -35,16 +43,25 @@ body {
   margin: 5px;
   overflow: hidden;
   width: 300px;
+  cursor: pointer;
+}
+
+.movie-card:hover {
+  border: 1px solid rgb(0, 255, 234);
 }
 
 
 .movie-card-image {
   width: 100%;
+  margin-bottom: 40px;
 }
 
 .movie-card-body {
   flex: 1 1 auto;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
 
 .movie-card-title {
@@ -78,6 +95,11 @@ body {
   background-color: rgba(0, 0, 0, 0.03);
   border-top: 1px solid rgba(0, 0, 0, 0.125);
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
+  align-items: center;
   padding: 12px 20px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
