--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: whitesmoke;
+  background-color: gray;
   box-sizing: border-box;
   font-size: 16px;
 }
@@ -14,7 +14,7 @@ body {
 }
 
 .page-title {
-  color: #f8f9fa;
+  color: #1e1f20;
   font-size: 28px;
   font-weight: 500;
   text-align: center;
