--- a/src/App.css
+++ b/src/App.css
@@ -30,12 +30,20 @@ body {
   background-color: white;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 3px;
+  box-shadow: inset 200px 0 50px rgba(0, 0, 0, 1);
   display: flex;
   flex-direction: column;
-  height: 450px;
+  height: 400px;
   margin: 5px;
   overflow: hidden;
+  perspective: 200px;
+  transition: 0.5s;
   width: 300px;
+}
+
+.movie-card:hover {
+  transform: perspective(200px) rotate(-10deg);
+  box-shadow: inset 20px 0px 50px rgba(0, 0, 0, 1);
 }
 
 .movie-card-image {
@@ -48,13 +56,14 @@ body {
 }
 
 .movie-card-title {
+  color: #6c757d;
   font-size: 24px;
   font-weight: 500;
   margin: 0 0 12px;
 }
 
 .movie-card-subtitle {
-  color: #6c757d;
+  color: #030303;
   font-size: 16px;
   font-weight: 500;
   margin: 0 0 8px;
