--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@ body {
   font-size: 16px;
 }
 
+li {
+  list-style: none;
+}
+
 .movie-card-header {
   align-items: center;
   background-color: #343a40;
@@ -45,6 +49,7 @@ body {
 .movie-card-body {
   flex: 1 1 auto;
   padding: 20px;
+  
 }
 
 .movie-card-title {
@@ -63,6 +68,7 @@ body {
 .movie-card-storyline {
   font-size: 14px;
   text-align: justify;
+  max-height: 76px;
 }
 
 .rating {
@@ -79,5 +85,5 @@ body {
   border-top: 1px solid rgba(0, 0, 0, 0.125);
   display: flex;
   justify-content: flex-end;
-  padding: 12px 20px;
+  padding : 5px
 }
