Creating MovieList Component and rendering some stuffs on it

--- a/src/App.css
+++ b/src/App.css
@@ -85,7 +85,7 @@ body {
 
 .header {
   align-items: center;
-  background-color: #6c757d;
+  background-color: #565656; 
   color: white;
   display: flex;
   font-weight: 700;
