--- a/src/App.css
+++ b/src/App.css
@@ -67,15 +67,15 @@ body {
 
 .rating {
   background-color: #007bff;
-  height: 20px;
-  width: 30px;
   border-radius: 25px;
   color: white;
   font-size: 16px;
   font-weight: 700;
+  height: 20px;
   padding: 3px 9px;
   text-align: center;
-  vertical-align: center;
+  vertical-align: middle;
+  width: 30px;
 }
 
 .movie-card-rating {
