--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,10 @@ body {
 }
 
 .movie-list {
+  background-color: lightslategrey;
   display: flex;
   flex-flow: row wrap;
+  justify-content: center;
   padding: 48px 30px;
 }
 
@@ -71,6 +73,7 @@ body {
   color: white;
   font-size: 16px;
   font-weight: 700;
+  margin-left: 10px;
   padding: 3px 9px;
 }
 
