--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,19 @@
 body {
-  background-color: whitesmoke;
+  background-color: rgb(223, 223, 223);
   box-sizing: border-box;
   font-size: 16px;
 }
 
 .movie-card-header {
   align-items: center;
-  background-color: #343a40;
+  background-color: #4b4e52;
   display: flex;
   height: 100px;
   justify-content: center;
 }
 
 .page-title {
-  color: #f8f9fa;
+  color: #77b9fa;
   font-size: 28px;
   font-weight: 500;
   text-align: center;
@@ -22,6 +22,7 @@ body {
 .movie-list {
   display: flex;
   flex-flow: row wrap;
+  justify-content: space-around ;
   padding: 48px 30px;
 }
 
@@ -37,13 +38,13 @@ body {
   width: 300px;
 }
 
-
 .movie-card-image {
   width: 100%;
 }
 
 .movie-card-body {
   flex: 1 1 auto;
+  height: 60px;
   padding: 20px;
 }
 
@@ -67,17 +68,17 @@ body {
 
 .rating {
   background-color: #007bff;
-  border-radius: 25px;
+  border-radius: 30px;
   color: white;
   font-size: 16px;
   font-weight: 700;
-  padding: 3px 9px;
+  padding: 5px 10px;
 }
 
 .movie-card-rating {
   background-color: rgba(0, 0, 0, 0.03);
   border-top: 1px solid rgba(0, 0, 0, 0.125);
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   padding: 12px 20px;
 }
