--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,24 @@
 body {
-  background-color: whitesmoke;
+  background: linear-gradient(to top, #cfdef3, #e0eafc);
   box-sizing: border-box;
   font-size: 16px;
+}
+
+.grid {
+  display: flex;
+  flex-grow: 2;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .movie-card-header {
   align-items: center;
   background-color: #343a40;
+  color: yellow;
   display: flex;
   height: 100px;
   justify-content: center;
+  text-shadow: 1px 1px #fc0;
 }
 
 .page-title {
@@ -26,31 +35,39 @@ body {
 }
 
 .movie-card {
-  background-color: white;
+  background-color: rgb(243, 240, 240);
   border: 1px solid rgba(0, 0, 0, 0.125);
-  border-radius: 3px;
+  border-radius: 30px;
   display: flex;
   flex-direction: column;
-  height: 450px;
+  height: 480px;
   margin: 5px;
   overflow: hidden;
-  width: 300px;
+  width: 500px;
 }
 
-
 .movie-card-image {
+  transition: all 0.3s;
+  width: 100%;
+}
+
+.movie-card-image:hover {
+  transform: scale(1.1);
   width: 100%;
 }
 
 .movie-card-body {
   flex: 1 1 auto;
-  padding: 20px;
+  flex-grow: 1;
+  padding: 0;
 }
 
 .movie-card-title {
   font-size: 24px;
   font-weight: 500;
   margin: 0 0 12px;
+  padding-top: 15px;
+  text-align: center;
 }
 
 .movie-card-subtitle {
@@ -58,24 +75,26 @@ body {
   font-size: 16px;
   font-weight: 500;
   margin: 0 0 8px;
+  text-align: center;
 }
 
 .movie-card-storyline {
   font-size: 14px;
+  margin: 10px;
   text-align: justify;
 }
 
 .rating {
-  background-color: #007bff;
+  background-color: #fc0;
   border-radius: 25px;
-  color: white;
+  color: black;
   font-size: 16px;
   font-weight: 700;
   padding: 3px 9px;
 }
 
 .movie-card-rating {
-  background-color: rgba(0, 0, 0, 0.03);
+  background-color: rgb(243, 240, 240);
   border-top: 1px solid rgba(0, 0, 0, 0.125);
   display: flex;
   justify-content: flex-end;
