--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 body {
   background-color: whitesmoke;
   box-sizing: border-box;
-  font-size: 16px;
 }
 
 .movie-card-header {
@@ -14,15 +13,16 @@ body {
 
 .page-title {
   color: #f8f9fa;
-  font-size: 28px;
+  font-size: 50px;
   font-weight: 500;
   text-align: center;
 }
 
 .movie-list {
   display: flex;
-  flex-flow: row wrap;
-  padding: 48px 30px;
+  flex-flow: column wrap;
+  flex-direction: row;
+  padding: 20px 20px;
 }
 
 .movie-card {
@@ -31,12 +31,11 @@ body {
   border-radius: 3px;
   display: flex;
   flex-direction: column;
-  height: 450px;
-  margin: 5px;
+  height: 700px;
+  margin: 10px;
   overflow: hidden;
-  width: 300px;
+  width: 680px;
 }
-
 
 .movie-card-image {
   width: 100%;
@@ -44,34 +43,31 @@ body {
 
 .movie-card-body {
   flex: 1 1 auto;
-  padding: 20px;
 }
 
 .movie-card-title {
-  font-size: 24px;
+  font-size: 25px;
   font-weight: 500;
-  margin: 0 0 12px;
 }
 
 .movie-card-subtitle {
   color: #6c757d;
-  font-size: 16px;
+  font-size: 17px;
   font-weight: 500;
-  margin: 0 0 8px;
 }
 
 .movie-card-storyline {
-  font-size: 14px;
-  text-align: justify;
+  font-size: 17px;
+  text-align: start;
 }
 
 .rating {
   background-color: #007bff;
   border-radius: 25px;
   color: white;
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 700;
-  padding: 3px 9px;
+  padding: 10px 15px;
 }
 
 .movie-card-rating {
@@ -79,5 +75,5 @@ body {
   border-top: 1px solid rgba(0, 0, 0, 0.125);
   display: flex;
   justify-content: flex-end;
-  padding: 12px 20px;
+  padding: 18px 30px;
 }
